feat: add file processing capabilities for various formats and implement metadata extraction
chore: update .gitignore to include additional files

chore: add initial test suite for file processing functions

--- a/agente_extracao/requirements.txt
+++ b/agente_extracao/requirements.txt
@@ -6,3 +6,6 @@ sqlite-utils==3.35
 python-dotenv==1.0.0
 langchain==0.3.0
 langgraph==0.2.20
+pymongo==4.5.0
+pathlib2==2.3.7
+typing-extensions==4.8.0
